--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,17 @@
+.title{
+	font-family: 			'VT323';
+}	
+.subtitle{
+	font-family:  			'Permanent Marker';
+	font-size:  			20px;
+}
 .memory{
 	background-color: 		#7FFF00;
-	margin-left:			10px; 
-}
-#secoper{
-	background-color: 		#64c900;
+	margin-left:			10px;
+	margin-top:  			10px;
+	margin-bottom:  		10px; 
+	font-family:			'Special Elite';
+	font-size:  			25px;
 }
 .input{
 	color: 					#51a300;
@@ -11,35 +19,43 @@
 	margin-left:			10px;
 	margin-right:			10px;
 	height: 				10%;
+	font-family:			'Special Elite';
+	font-size:  			25px;
 }
 .result{
 	background-color:		gray;
 	color:					black;
-	font-style:				italic;
-	font-weight:			bold;
 	margin-left:			120px;
 	margin-right:			10px;
 	height:					80px;
+	font-style:				italic;
+	font-weight:			bold;
+	font-family:			'Special Elite';
+	font-size:  			25px;
 }
 div{
-	margin-left: 			10px;
-	margin-right: 			10px;
+	margin-left: 			15px;
+	margin-right: 			15px;
 }
 #calc{
 	height: 				50%;
 	background-color: 		powderblue;
 	border-color: 			black;
-	font-family:			arial;
+	font-family:  			'VT323';
+	font-size:  			25px;
 }
 #clear{
 	background-color:		red;
 }
 #equals{
 	background-color:		red;
+	font-family:  			'Permanent Marker';
 }
 .key{
 	background-color: 		orange;
 	height:					50px;
+	font-family:			'Special Elite';
+	font-size:  			25px;
 }
 .op{
 	background-color:  		#FF5733;
