--- a/estilo.css
+++ b/estilo.css
@@ -39,19 +39,25 @@ div{
 }
 #calc{
 	height: 				50%;
+	width:  				auto;
 	background-color: 		powderblue;
 	border-color: 			black;
 	font-family:  			'VT323';
 	font-size:  			25px;
+	border-spacing:  		5px;
 }
 #clear{
 	background-color:		#ff0000;
+	border-radius:  		20px;
+	box-shadow:  			2px 2px;
 }
 #clear:active{
 	background-color:		#cc0000;
+	box-shadow:  			0px 0px;
 }
 #equals{
 	background-color:		#ff0000;
+	box-shadow:  			2px 2px;
 	font-family:  			'Permanent Marker';
 }
 #equals:active{
@@ -59,20 +65,26 @@ div{
 	font-family:  			'Permanent Marker';
 }
 .key{
-	background-color: 		#FFA500;
 	height:					50px;
+	background-color: 		#FFA500;
+	box-shadow:  			2px 2px;
+	border-radius:  		20px;
 	font-family:			'Special Elite';
 	font-size:  			25px;
 }
 .key:active{
 	background-color: 		#cc8400;
 	height:					50px;
+	box-shadow:  			0px 0px;
 	font-family:			'Special Elite';
 	font-size:  			25px;
 }
 .op{
 	background-color:  		#FF5733;
+	border-radius:  		20px;
+	box-shadow:  			2px 2px;
 }
 .op:active{
 	background-color:  		#cc4528;
+	box-shadow:  			0px 0px;
 }
